--- a/server/package.json
+++ b/server/package.json
@@ -22,11 +22,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "uuid": "^8.3.0",
     "ws": "^7.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/node": "^14.6.2",
+    "@types/uuid": "^8.3.0",
     "@types/ws": "^7.2.6",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
