--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "tsc && node dist/index.js",
     "serve": "nodemon index.ts",
+    "start:development": "npm run serve",
+    "start:production": "npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,15 +25,15 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "uuid": "^8.3.0",
-    "ws": "^7.3.1"
-  },
-  "devDependencies": {
+    "ws": "^7.3.1",
+    "typescript": "^4.0.2",
     "@types/express": "^4.17.7",
     "@types/node": "^14.6.2",
     "@types/uuid": "^8.3.0",
-    "@types/ws": "^7.2.6",
+    "@types/ws": "^7.2.6"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
+    "ts-node": "^9.0.0"
   }
 }
