Add postgresql image to project docker-compose

--- a/server/docker-compose.dev.yml
+++ b/server/docker-compose.dev.yml
@@ -6,3 +6,6 @@ services:
         - NODE_ENV=development
     volumes:
       - .:/usr/src/app
+  db:
+    volumes:
+      - ./db/data:/var/lib/postgresql/data
