--- a/server/package.json
+++ b/server/package.json
@@ -21,16 +21,18 @@
   },
   "homepage": "https://github.com/thomas-god/parcelec#readme",
   "dependencies": {
+    "@types/express": "^4.17.7",
+    "@types/node": "^14.6.2",
+    "@types/pg": "^7.14.4",
+    "@types/uuid": "^8.3.0",
+    "@types/ws": "^7.2.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "uuid": "^8.3.0",
-    "ws": "^7.3.1",
+    "pg": "^8.3.3",
     "typescript": "^4.0.2",
-    "@types/express": "^4.17.7",
-    "@types/node": "^14.6.2",
-    "@types/uuid": "^8.3.0",
-    "@types/ws": "^7.2.6"
+    "uuid": "^8.3.0",
+    "ws": "^7.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
