--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,12 @@
   "description": "Server for the parcélec project",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "start": "node dist/index.js",
     "serve": "nodemon index.ts",
     "start:development": "npm run serve",
     "start:production": "npm run start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:unit": "npx jest -c jest.unit.config.js",
+    "test:integration": "sudo docker-compose -f docker-compose.yml -f docker-compose.test.yml up --build --abort-on-container-exit"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,10 @@
   "homepage": "https://github.com/thomas-god/parcelec#readme",
   "dependencies": {
     "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.13",
     "@types/node": "^14.6.2",
     "@types/pg": "^7.14.4",
+    "@types/superagent": "^4.1.10",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.2.6",
     "cors": "^2.8.5",
@@ -35,7 +38,10 @@
     "ws": "^7.3.1"
   },
   "devDependencies": {
+    "jest": "^26.4.2",
     "nodemon": "^2.0.4",
+    "superagent": "^6.1.0",
+    "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0"
   }
 }
