--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "serve": "nodemon index.ts",
-    "start:development": "npm run serve",
-    "start:production": "npm run start",
+    "serve": "sudo docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --build",
+    "start:development": "nodemon index.ts",
+    "start:production": "node dist/index.js",
     "test:unit": "npx jest -c jest.unit.config.js",
     "test:integration": "sudo docker-compose -f docker-compose.yml -f docker-compose.test.yml up --build --abort-on-container-exit"
   },
