--- a/.github/workflows/server_unit_tests.yml
+++ b/.github/workflows/server_unit_tests.yml
@@ -23,4 +23,4 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm test:unit
+    - run: npm run test:unit
