--- a/.github/workflows/server_unit_tests.yml
+++ b/.github/workflows/server_unit_tests.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Node.js CI
+name: Server UnitTests
 
 on: [push, pull_request]
 
@@ -23,4 +20,5 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: npm i
     - run: npm run test:unit
