--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@types/pg": "^7.14.4",
     "@types/superagent": "^4.1.10",
     "@types/uuid": "^8.3.0",
+    "@types/winston": "^2.4.4",
     "@types/ws": "^7.2.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -36,6 +37,7 @@
     "pg": "^8.3.3",
     "typescript": "^4.0.2",
     "uuid": "^8.3.0",
+    "winston": "^3.3.3",
     "ws": "^7.3.1"
   },
   "devDependencies": {
