feat(refacto): refacto start

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "test:unit": "npx jest -c jest.unit.config.js",
     "test:integration": "sudo docker-compose -f docker-compose.yml -f docker-compose.test.yml up --build --abort-on-container-exit",
     "test-docker": "docker-compose down && docker-compose up --force-recreate --build --abort-on-container-exit"
+    "openapi": "npx ts-node ./src/routes/swagger.ts"
   },
   "repository": {
     "type": "git",
@@ -33,12 +34,18 @@
     "@types/uuid": "^8.3.0",
     "@types/winston": "^2.4.4",
     "@types/ws": "^7.2.6",
+    "awilix": "^4.3.1",
+    "chai": "^4.3.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.12",
     "db-migrate-pg": "^1.2.2",
     "express": "^4.17.1",
+    "express-openapi-validator": "^4.10.11",
+    "js-yaml": "^4.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.3.3",
+    "swagger-jsdoc": "^6.0.2",
     "pg-native": "^3.0.0",
     "typescript": "^4.0.2",
     "uuid": "^8.3.0",
@@ -46,6 +53,7 @@
     "ws": "^7.3.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.14",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "eslint": "^7.9.0",
