--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -5,7 +5,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:security/recommended"
+    "plugin:@typescript-eslint/recommended"
+    //"plugin:security/recommended"
   ]
 }
