--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
     "lint": "eslint . --ext .ts",
     "test:unit": "npx jest -c jest.unit.config.js",
     "test:integration": "sudo docker-compose -f docker-compose.yml -f docker-compose.test.yml up --build --abort-on-container-exit",
-    "test-docker": "docker-compose down && docker-compose up --force-recreate --build --abort-on-container-exit"
-    "openapi": "npx ts-node ./src/routes/swagger.ts"
+    "test-docker": "docker-compose down && docker-compose up --force-recreate --build --abort-on-container-exit",
+    "openapi": "npx ts-node ./src/routes/swagger.ts",
+    "format-fix": "prettier --write src",
+    "format-check": "prettier --check src"
   },
   "repository": {
     "type": "git",
@@ -57,9 +59,13 @@
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "eslint": "^7.9.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-security": "^1.4.0",
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
+    "prettier": "^2.2.1",
     "superagent": "^6.1.0",
     "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0"
