--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,23 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
+    "outDir": "./dist",
+    "allowJs": true,
     "target": "es6",
+    "esModuleInterop": true,
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "removeComments": true,
+    "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "experimentalDecorators": false,
+    "emitDecoratorMetadata": false
   },
-  "lib": ["es2015"]
+  "include": [
+    "./src/**/*"
+  ],
+  "types": [
+    "./src/app/types/*"
+  ]
 }
