--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
     "start:development": "nodemon index.ts",
     "start:production": "node dist/index.js",
     "lint": "eslint . --ext .ts",
+    "lint-fix": "eslint . --ext .ts --fix",
+    "test": "mocha -r ts-node/register ./tests/**/*.spec.ts --recursive --exit",
     "test:unit": "npx jest -c jest.unit.config.js",
     "test:integration": "sudo docker-compose -f docker-compose.yml -f docker-compose.test.yml up --build --abort-on-container-exit",
     "test-docker": "docker-compose down && docker-compose up --force-recreate --build --abort-on-container-exit",
@@ -29,7 +31,6 @@
   "homepage": "https://github.com/thomas-god/parcelec#readme",
   "dependencies": {
     "@types/express": "^4.17.7",
-    "@types/jest": "^26.0.13",
     "@types/node": "^14.6.2",
     "@types/pg": "^7.14.4",
     "@types/superagent": "^4.1.10",
@@ -56,6 +57,11 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/cors": "^2.8.9",
+    "@types/js-yaml": "^4.0.0",
+    "@types/mocha": "^8.2.0",
+    "@types/morgan": "^1.9.2",
+    "@types/swagger-jsdoc": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "eslint": "^7.9.0",
@@ -63,7 +69,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-security": "^1.4.0",
-    "jest": "^26.4.2",
+    "mocha": "^8.2.1",
     "nodemon": "^2.0.4",
     "prettier": "^2.2.1",
     "superagent": "^6.1.0",
