--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "pg": "^8.3.3",
+    "pg-native": "^3.0.0",
     "typescript": "^4.0.2",
     "uuid": "^8.3.0",
     "winston": "^3.3.3",
