--- a/server/package.json
+++ b/server/package.json
@@ -33,9 +33,12 @@
     "@types/winston": "^2.4.4",
     "@types/ws": "^7.2.6",
     "cors": "^2.8.5",
+    "db-migrate": "^0.11.12",
+    "db-migrate-pg": "^1.2.2",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "pg": "^8.3.3",
+    "pg-native": "^3.0.0",
     "typescript": "^4.0.2",
     "uuid": "^8.3.0",
     "winston": "^3.3.3",
