feature(post_bid): add route and tests

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -18,5 +18,7 @@ services:
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=parcelec
       - POSTGRES_USER=user
+    ports:
+      - "5432:5432"
     expose:
       - '5432'
