--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,7 @@
     "allowJs": true,
     "target": "es6",
     "esModuleInterop": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false, // true when refactor is done,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "removeComments": true,
