--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "backend"
+name = "parcelec"
 version = "0.1.0"
 description = ""
 authors = ["thomas-god <thomas.godlewski@icloud.com>"]
