--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,22 +3,10 @@ services:
   server:
     build:
       context: .
-      dockerfile: ./e2e/Dockerfile
       args:
         - NODE_ENV=production
-    environment:
-      - DATABASE_URL=postgres://user:password@db:5432/parcelec
     ports:
       - "3000:3000"
-    links:
-      - db
   db:
-    image: postgres:13
-    environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=parcelec
-      - POSTGRES_USER=user
-    ports:
-      - "5432:5432"
-    expose:
-      - '5432'
+    build:
+      context: ./db
