--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,8 @@
     "start:development": "nodemon index.ts",
     "start:production": "node dist/index.js",
     "lint": "eslint . --ext .ts",
-    "lint-fix": "eslint . --ext .ts --fix",
-    "format-fix": "prettier --write src",
-    "format-check": "prettier --check src",
-    "test": "mocha -r ts-node/register ./tests/**/*.spec.ts --recursive --exit",
-    "test-docker": "docker-compose down && docker-compose up --force-recreate --build --abort-on-container-exit",
-    "openapi": "npx ts-node ./src/routes/swagger.ts"
+    "test:unit": "npx jest -c jest.unit.config.js",
+    "test:integration": "sudo docker-compose -f docker-compose.yml -f docker-compose.test.yml up --build --abort-on-container-exit"
   },
   "repository": {
     "type": "git",
@@ -28,50 +24,35 @@
   },
   "homepage": "https://github.com/thomas-god/parcelec#readme",
   "dependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.31",
-    "@types/pg": "^7.14.10",
+    "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.6.2",
+    "@types/pg": "^7.14.4",
     "@types/superagent": "^4.1.10",
     "@types/uuid": "^8.3.0",
     "@types/winston": "^2.4.4",
-    "@types/ws": "^7.4.0",
-    "awilix": "^4.3.3",
-    "chai": "^4.3.1",
-    "chai-http": "^4.3.0",
+    "@types/ws": "^7.2.6",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.12",
     "db-migrate-pg": "^1.2.2",
     "express": "^4.17.1",
-    "express-openapi-validator": "^4.12.1",
-    "js-yaml": "^4.0.0",
     "morgan": "^1.10.0",
-    "pg": "^8.5.1",
+    "pg": "^8.3.3",
     "pg-native": "^3.0.0",
-    "swagger-jsdoc": "^6.0.8",
-    "typescript": "^4.2.2",
-    "uuid": "^8.3.2",
+    "typescript": "^4.0.2",
+    "uuid": "^8.3.0",
     "winston": "^3.3.3",
-    "ws": "^7.4.3"
+    "ws": "^7.3.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.14",
-    "@types/cors": "^2.8.9",
-    "@types/js-yaml": "^4.0.0",
-    "@types/mocha": "^8.2.0",
-    "@types/morgan": "^1.9.2",
-    "@types/swagger-jsdoc": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
+    "eslint": "^7.9.0",
     "eslint-plugin-security": "^1.4.0",
-    "mocha": "^8.2.1",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.4",
     "superagent": "^6.1.0",
-    "ts-jest": "^26.5.2",
-    "ts-node": "^9.1.1"
+    "ts-jest": "^26.3.0",
+    "ts-node": "^9.0.0"
   }
 }
