--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,25 +1,11 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "allowJs": true,
-    "target": "es6",
-    "esModuleInterop": true,
-    "noImplicitAny": false, // true when refactor is done,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "removeComments": true,
     "module": "commonjs",
+    "esModuleInterop": true,
+    "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "experimentalDecorators": false,
-    "emitDecoratorMetadata": false,
-    "skipLibCheck": true
+    "outDir": "dist"
   },
-  "include": [
-    "./src/**/*",
-    "./e2e/**/*"
-  ],
-  "types": [
-    "./src/app/types/*"
-  ]
+  "lib": ["es2015"]
 }
