--- a/.github/workflows/api_tests.yml
+++ b/.github/workflows/api_tests.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run the API tests suite in a Docker environment
-        run: npm run test:integration
+        run: npm run test-docker
