--- a/.github/workflows/api_tests.yml
+++ b/.github/workflows/api_tests.yml
@@ -4,7 +4,7 @@ name: API Integration tests
 on: [push, pull_request]
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
     defaults:
       run:
