--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,13 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "serve": "sudo docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --build",
-    "start:development": "nodemon index.ts",
-    "start:production": "node dist/index.js",
+    "dev": "ts-node-dev --inspect=7000 --respawn --transpile-only index.ts",
     "lint": "eslint . --ext .ts",
-    "lint-fix": "eslint . --ext .ts --fix",
-    "format-fix": "prettier --write src",
-    "format-check": "prettier --check src",
-    "test": "mocha -r ts-node/register ./tests/**/*.spec.ts --recursive --exit",
-    "test-docker": "docker-compose down && docker-compose up --force-recreate --build --abort-on-container-exit",
-    "openapi": "npx ts-node ./src/routes/swagger.ts"
+    "test-unit": "jest --runInBand --colors --verbose --coverage",
+    "test-docker": "DOCKER_BUILDKIT=1 docker-compose down --remove-orphans && docker-compose up --force-recreate --build --abort-on-container-exit",
+    "local-env": "DOCKER_BUILDKIT=1 docker-compose -f docker-compose.local.yml down --remove-orphans && docker-compose -f docker-compose.local.yml up --force-recreate --build",
+    "db-migrate-up": "node node_modules/db-migrate/bin/db-migrate up -v",
+    "db-migrate-down": "node node_modules/db-migrate/bin/db-migrate down -v"
   },
   "repository": {
     "type": "git",
@@ -28,50 +25,37 @@
   },
   "homepage": "https://github.com/thomas-god/parcelec#readme",
   "dependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.31",
-    "@types/pg": "^7.14.10",
+    "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.6.2",
+    "@types/pg": "^7.14.4",
     "@types/superagent": "^4.1.10",
     "@types/uuid": "^8.3.0",
     "@types/winston": "^2.4.4",
-    "@types/ws": "^7.4.0",
-    "awilix": "^4.3.3",
-    "chai": "^4.3.1",
-    "chai-http": "^4.3.0",
+    "@types/ws": "^7.2.6",
     "cors": "^2.8.5",
-    "db-migrate": "^0.11.12",
+    "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
-    "express-openapi-validator": "^4.12.1",
-    "js-yaml": "^4.0.0",
     "morgan": "^1.10.0",
-    "pg": "^8.5.1",
+    "pg": "^8.7.3",
     "pg-native": "^3.0.0",
-    "swagger-jsdoc": "^6.0.8",
-    "typescript": "^4.2.2",
-    "uuid": "^8.3.2",
+    "typescript": "^4.0.2",
+    "uuid": "^8.3.0",
     "winston": "^3.3.3",
-    "ws": "^7.4.3"
+    "ws": "^7.3.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.14",
-    "@types/cors": "^2.8.9",
-    "@types/js-yaml": "^4.0.0",
-    "@types/mocha": "^8.2.0",
-    "@types/morgan": "^1.9.2",
-    "@types/swagger-jsdoc": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
+    "eslint": "^7.9.0",
     "eslint-plugin-security": "^1.4.0",
-    "mocha": "^8.2.1",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.4",
     "superagent": "^6.1.0",
-    "ts-jest": "^26.5.2",
-    "ts-node": "^9.1.1"
+    "ts-jest": "^26.3.0",
+    "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.1.8"
   }
 }
