--- a/.github/workflows/api_tests.yml
+++ b/.github/workflows/api_tests.yml
@@ -1,7 +1,14 @@
 
 name: API tests
 
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - 'feature/**'
+      - 'hotfix/**'
+  push:
+    branches:
+      - "develop"
 
 jobs:
   tests:
