--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /usr/src/app
 ARG NODE_ENV=development
 ENV NODE_ENV=${NODE_ENV}
 
-COPY package*.json /usr/src/app
+COPY package*.json /usr/src/app/
 
 RUN npm ci
 RUN echo $NODE_ENV
