--- a/.github/workflows/build_prod_image.yml
+++ b/.github/workflows/build_prod_image.yml
@@ -1,9 +1,10 @@
 name: Build production Docker image and publish it to Docker Hub
 
 on:
+  pull_request:
   push:
     branches:
-      - 'main'
+      - 'develop'
 
 jobs:
   docker:
