--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.39"
 tokio = { version = "1.43.0", features = ["full"] }
+uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
