--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.39"
+futures-util = "0.3.31"
 tokio = { version = "1.43.0", features = ["full"] }
+tokio-tungstenite = "0.26.1"
 uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
