--- a/app/docker-stack.yaml
+++ b/app/docker-stack.yaml
@@ -2,15 +2,16 @@ services:
   traefik:
     image: traefik:v3.1
     command:
+      - "--log.level=DEBUG"
       - "--providers.docker"
       - "--providers.docker.exposedbydefault=false"
       - "--entryPoints.websecure.address=:443"
       - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
       - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
-      - "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
-      - "--entrypoints.web.address=:80"
-      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
-      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
+      # - "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
+      # - "--entrypoints.parcelec.address=:80"
+      # - "--entrypoints.parcelec.http.redirections.entrypoint.to=websecure"
+      # - "--entrypoints.parcelec.http.redirections.entrypoint.scheme=https"
     ports:
       - mode: host
         protocol: tcp
@@ -24,14 +25,14 @@ services:
       - letsencrypt:/letsencrypt
       - /var/run/docker.sock:/var/run/docker.sock
 
-  app:
+  parcelec:
     image: ghcr.io/thomas-god/parcelec-app:latest
     labels:
       - "traefik.enable=true"
-      - "traefik.http.services.web.loadbalancer.server.port=9002"
-      - "traefik.http.routers.web.rule=Host(`parcelec.org`)"
-      - "traefik.http.routers.web.entrypoints=websecure"
-      - "traefik.http.routers.web.tls.certresolver=myresolver"
+      - "traefik.http.services.parcelec.loadbalancer.server.port=9002"
+      - "traefik.http.routers.parcelec.rule=Host(`parcelec.org`)"
+      - "traefik.http.routers.parcelec.entrypoints=websecure"
+      - "traefik.http.routers.parcelec.tls.certresolver=myresolver"
     deploy:
       update_config:
         order: start-first
