--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build-docker-image:
+  build-app-docker-image:
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
@@ -34,10 +34,38 @@ jobs:
           tags: |
             ghcr.io/thomas-god/parcelec-app:latest
             ghcr.io/thomas-god/parcelec-app:${{ github.sha }}
+
+  build-client-docker-image:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: https://ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: "{{defaultContext}}:client"
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            ghcr.io/thomas-god/parcelec-client:latest
+            ghcr.io/thomas-god/parcelec-client:${{ github.sha }}
+
   deploy:
     runs-on: ubuntu-latest
     needs:
-      - build-docker-image
+      - build-app-docker-image
+      - build-client-docker-image
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
