cd: load app url from env when building client

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -12,7 +12,8 @@ RUN npm ci
 # Copy the rest of the application
 COPY . .
 
-# Build the application
+# Build the application for production
+ENV NODE_ENV=production
 RUN npm run build
 
 # Use the official Nginx image
