--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,15 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/vite": "^4.0.3",
     "@tsconfig/svelte": "^5.0.4",
     "svelte": "^5.15.0",
     "svelte-check": "^4.1.1",
+    "tailwindcss": "^4.0.3",
+    "ts-pattern": "^5.6.2",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
-    "vitest": "^3.0.5"
-  },
-  "dependencies": {
-    "ts-pattern": "^5.6.2",
+    "vitest": "^3.0.5",
     "zod": "^3.24.1"
   }
 }
