--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.0.3",
     "@tsconfig/svelte": "^5.0.4",
+    "effect": "^3.12.9",
     "svelte": "^5.15.0",
     "svelte-check": "^4.1.1",
     "tailwindcss": "^4.0.3",
