--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,23 @@
     "preview": "vite preview",
     "test": "vitest",
     "format": "npx @biomejs/biome format --write ./src",
-    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
+    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
+    "storybook": "storybook dev -p 6006"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@chromatic-com/storybook": "^3.2.4",
+    "@storybook/addon-essentials": "^8.5.3",
+    "@storybook/addon-interactions": "^8.5.3",
+    "@storybook/addon-svelte-csf": "^5.0.0-next.23",
+    "@storybook/blocks": "^8.5.3",
+    "@storybook/svelte": "^8.5.3",
+    "@storybook/svelte-vite": "^8.5.3",
+    "@storybook/test": "^8.5.3",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.0.3",
     "@tsconfig/svelte": "^5.0.4",
-    "effect": "^3.12.9",
+    "storybook": "^8.5.3",
     "svelte": "^5.15.0",
     "svelte-check": "^4.1.1",
     "tailwindcss": "^4.0.3",
