feat: switch to `axum` to manage ws connection upgrade

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+axum = { version = "0.8.1", features = ["ws"] }
 chrono = { version = "0.4.39", features = ["serde"] }
 futures-util = "0.3.31"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 tokio = { version = "1.43.0", features = ["full"] }
-tokio-tungstenite = "0.26.1"
+tower-cookies = "0.11.0"
 uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
