--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,4 +11,5 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 tokio = { version = "1.43.0", features = ["full"] }
 tower-cookies = "0.11.0"
+tower-http = { version = "0.6.2", features = ["cors"] }
 uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
