chore: update Dockerfile

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /app
 COPY Cargo.toml /app
 COPY src/ /app/src
 
+ENV ALLOW_ORIGIN = "https://parcelec.org"
+
 RUN cargo build --release
 
 # Prod layer
