--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.8.1", features = ["ws"] }
+axum = { version = "0.8.1", features = ["macros", "ws"] }
 chrono = { version = "0.4.39", features = ["serde"] }
 futures-util = "0.3.31"
 serde = { version = "1.0.217", features = ["derive"] }
