--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
-VITE_WS_URL=wss://app.parcelec.org
-VITE_APP_URL=https://app.parcelec.org
+PUBLIC_WS_URL=wss://app.parcelec.org
+PUBLIC_APP_URL=https://app.parcelec.org
