--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -27,8 +27,9 @@ RUN npm run build
 FROM nginx:alpine
 
 # Copy the build output to replace the default nginx contents
-COPY --from=build /app/public /usr/share/nginx/html
-COPY --from=build /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=build --chown=nginx:nginx /app/public /usr/share/nginx/html
+COPY --from=build --chown=nginx:nginx /app/build /usr/share/nginx/html
 
 # Expose the port
 EXPOSE 80
