--- a/client/package.json
+++ b/client/package.json
@@ -40,7 +40,7 @@
     "@storybook/addon-svelte-csf": "^5.0.0-next.23",
     "@storybook/blocks": "^8.5.3",
     "@storybook/svelte": "^8.5.3",
-    "@storybook/svelte-vite": "^8.5.3",
+    "@storybook/sveltekit": "^8.5.3",
     "@storybook/test": "^8.5.3",
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.17.1",
