--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -5,7 +5,9 @@ server {
     server_name _;
 
     location / {
+        index index.html # to correctly serve the homepage
         try_files $uri $uri.html; # handle the output of SvelteKit correctly, by using a fallback pattern.
+
     }
 
     include /etc/nginx/mime.types; # handle mime.
