--- a/docker-stack.yaml
+++ b/docker-stack.yaml
@@ -9,9 +9,9 @@ services:
       - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
       - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
       # - "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
-      - "--entrypoints.cliet.address=:80"
-      - "--entrypoints.client.http.redirections.entrypoint.to=websecure"
-      - "--entrypoints.client.http.redirections.entrypoint.scheme=https"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
+      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
     ports:
       - mode: host
         protocol: tcp
