--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -10,7 +10,7 @@ futures-util = "0.3.31"
 rand = "0.9.0"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
-tokio = { version = "1.43.0", features = ["full", "time"] }
+tokio = { version = "1.43.0", features = ["full", "test-util", "time"] }
 tower-cookies = "0.11.0"
 tower-http = { version = "0.6.2", features = ["cors"] }
 uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
