--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.0.3",
     "@tsconfig/svelte": "^5.0.4",
+    "daisyui": "^5.0.0-beta.8",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "publint": "^0.3.4",
