--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,10 @@ version: 2
 updates:
   - package-ecosystem: "cargo" # See documentation for possible values
     directory: "/app" # Location of package manifests
+    groups:
+      all:
+        patterns:
+          - "*"
     schedule:
       interval: "weekly"
 
@@ -14,3 +18,7 @@ updates:
     directory: "/client" # Location of package manifests
     schedule:
       interval: "weekly"
+    groups:
+      all:
+        patterns:
+          - "*"
