--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -13,7 +13,9 @@ serde_json = "1.0.139"
 thiserror = "2.0.11"
 tokio = { version = "1.43.0", features = ["full", "test-util", "time"] }
 tower-cookies = "0.11.0"
-tower-http = { version = "0.6.2", features = ["cors"] }
+tower-http = { version = "0.6.2", features = ["cors", "trace"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 uuid = { version = "1.14.0", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
