--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.8.1", features = ["macros", "ws"] }
 chrono = { version = "0.4.39", features = ["serde"] }
+derive_more = { version = "2.0.1", features = ["from", "display", "as_ref", "into"] }
 futures-util = "0.3.31"
 rand = "0.9.0"
 serde = { version = "1.0.218", features = ["derive"] }
