--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -22,5 +22,6 @@ uuid = { version = "1.14.0", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
 futures = "0.3.31"
+http-body-util = "0.1.2"
 mockall = "0.13.1"
 tokio-tungstenite = "0.26.2"
