--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
 tokio = { version = "1.43.0", features = ["full", "test-util", "time"] }
+tokio-util = "0.7.13"
 tower-cookies = "0.11.0"
 tower-http = { version = "0.6.2", features = ["cors", "trace"] }
 tracing = "0.1.41"
