feat(ci): use cargo-chef and gha cache

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,20 @@
 # Build layer
-FROM rust:latest AS builder
+FROM rust:latest AS base
+RUN cargo install cargo-chef
 
+FROM base AS planner
 WORKDIR /app
+
+COPY Cargo.toml /app
+COPY src/ /app/src
+
+RUN cargo chef prepare --recipe-path recipe.json
+
+FROM base AS builder
+WORKDIR /app
+COPY --from=planner /app/recipe.json recipe.json
+
+RUN cargo chef cook --release --recipe-path recipe.json
 
 COPY Cargo.toml /app
 COPY src/ /app/src
