--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -25,6 +25,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # Cache the Cargo dependencies to speed up the build
+      - uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: service-${{ runner.os }}-buildx-cache
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
@@ -34,6 +40,14 @@ jobs:
           tags: |
             ghcr.io/thomas-god/parcelec-app:latest
             ghcr.io/thomas-god/parcelec-app:${{ github.sha }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+      # Move the new cache to the original location
+      - name: Move cache to original location
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
   build-client-docker-image:
     runs-on: ubuntu-latest
@@ -61,20 +75,20 @@ jobs:
             ghcr.io/thomas-god/parcelec-client:latest
             ghcr.io/thomas-god/parcelec-client:${{ github.sha }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs:
-      - build-app-docker-image
-      - build-client-docker-image
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - build-app-docker-image
+  #     - build-client-docker-image
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v2
 
-    - name: Docker Stack Deploy
-      uses: cssnr/stack-deploy-action@v1
-      with:
-        name: parcelec
-        file: docker-stack.yaml
-        host: parcelec.org
-        user: deploy
-        ssh_key: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
+  #   - name: Docker Stack Deploy
+  #     uses: cssnr/stack-deploy-action@v1
+  #     with:
+  #       name: parcelec
+  #       file: docker-stack.yaml
+  #       host: parcelec.org
+  #       user: deploy
+  #       ssh_key: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
