feat(ci): use cargo-chef and gha cache (#80)
* feat(ci): use cargo-chef and gha cache

* ci: change to trigger new build

* ci: use dedicated amd64/arm64 runners

* ci: use strategy matrix

* chore: ready to merge

--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -10,7 +10,18 @@ on:
 
 jobs:
   build-app-docker-image:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - arch: amd64
+            runs_on: ubuntu-24.04
+            platform: linux/amd64
+            cache_key: service-amd64-buildx-cache
+          - arch: arm64
+            runs_on: ubuntu-24.04-arm
+            platform: linux/arm64
+            cache_key: service-arm64-buildx-cache
+    runs-on: ${{ matrix.runs_on }}
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -25,15 +36,28 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Cache the Cargo dependencies
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ matrix.cache_key }}
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: "{{defaultContext}}:app"
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.platform }}
           push: true
           tags: |
             ghcr.io/thomas-god/parcelec-app:latest
             ghcr.io/thomas-god/parcelec-app:${{ github.sha }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+      - name: Move cache to original location
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
   build-client-docker-image:
     runs-on: ubuntu-latest
