ci: add `test:ci` command to client

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "prepare": "svelte-kit sync || echo ''",
     "prepack": "svelte-kit sync && svelte-package && publint",
     "test": "vitest",
+    "test:ci": "vitest run",
     "format": "prettier --write .",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
   },
