feat(client): add tests on plant components

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,6 +15,7 @@
     "checkJs": true,
     "strict": true,
     "isolatedModules": true,
-    "moduleDetection": "force"
+    "moduleDetection": "force",
+    "types": ["@testing-library/jest-dom"]
   }
 }
