--- a/docker-stack.yaml
+++ b/docker-stack.yaml
@@ -30,7 +30,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.services.parcelec.loadbalancer.server.port=9002"
-      - "traefik.http.routers.parcelec.rule=Host(`app.parcelec.org`)"
+      - "traefik.http.routers.parcelec.rule=Host(`parcelec.org`)"
+      - "traefik.http.routers.parcelec.rule=PathPrefix(`/api`)"
       - "traefik.http.routers.parcelec.entrypoints=websecure"
       - "traefik.http.routers.parcelec.tls.certresolver=myresolver"
     deploy:
