--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -22,8 +22,11 @@ tracing-subscriber = "0.3.19"
 uuid = { version = "1.15.1", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
+fantoccini = "0.21.4"
 futures = "0.3.31"
 http-body-util = "0.1.2"
 mockall = "0.13.1"
+scraper = "0.23.1"
 tokio-tungstenite = "0.26.2"
 tower = { version = "0.5.2", features = ["util"] }
+tower-http = { version = "0.6.2", features = ["fs"] }
