chore: include /static in client image

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -18,6 +18,7 @@ COPY .npmrc ./
 COPY .env.production ./.env
 COPY src/ ./src
 COPY public/ ./public
+COPY static/ ./static
 
 # Build the application for production
 ENV NODE_ENV=production
